Resuelto conflicto de fusión

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <a href="#inicio" class="logo-text">NeuroVida ACV</a>
                 <span class="logo-slogan">Recupera tu vida tras un ACV</span>
             </div>
+            <button class="mobile-menu-toggle" aria-label="Abrir menú" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="mobile-menu-overlay"></div>
             <ul class="nav-links">
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#tratamientos">Tratamientos</a></li>
